# interrogation_verifier

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  dataset.md  exmple.md  proposal.md  pyproject.toml
data/: convert_deltabench.py  convert_prmbench.py  mvp_cases.jsonl  prepare_math_subset.py  prmbench_cases.jsonl
data/PRMBench_Preview/: README.md  prmbench_preview.jsonl
data/competition_math_train/: dataset_info.json
data/grace-bench-14e8/data/: README.md  grace_examples.json
data/grace-bench-14e8/scripts/annotation/: run_aggregate.sh  run_assemble.sh  run_judge.sh
data/grace-bench-14e8/scripts/data_assembly/: run_pipeline.sh
data/grace-bench-14e8/scripts/end_evaluation/: run_evaluation.sh  run_inference.sh
data/grace-bench-14e8/scripts/trace_generation/: filter_groundedness.sh  run_opensource.sh
data/grace-bench-14e8/src/cot_generation/: __init__.py  parse_traces.py  prompts.py
data/grace-bench-14e8/src/data_assembly/: aggregator.py  assembler.py  focused_selector.py  refined_selector.py  (+2 more)
data/grace-bench-14e8/taxonomy/: taxonomy.md  taxonomy_grounding.json  taxonomy_inference.json
doc/: dependency_graph_verifier_spec_副本_繁體.md  note.md  proposal.md  verification-system.md
src/graph_verifier/: __init__.py  main.py
src/graph_verifier/core/: __init__.py  aggregate.py  graph.py  models.py  verify.py
src/graph_verifier/prompts/: answer_cases.md  decisiveness.md  direct.md  graph_extract.md  interrogate.md  interrogation_targets.md  verify_edge.md
src/graph_verifier/utils/: __init__.py  artifacts.py  jsonl.py  llm.py
tests/: test_mvp.py
(+14 files in other folders)
