[project]
name = "graph-verifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
]

[project.scripts]
graph-verifier = "graph_verifier.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
